--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "langchain": "^0.1.37",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
