--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dns": "^4.0.0",
     "@langchain/anthropic": "^0.1.17",
     "@langchain/google-vertexai": "^0.0.16",
     "@langchain/openai": "^0.0.28",
     "@langchain/pinecone": "^0.0.4",
     "@pinecone-database/pinecone": "^2.2.1",
     "@prisma/client": "^5.13.0",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ioredis": "^5.4.1",
+    "google-auth-library": "^9.10.0",
     "langchain": "^0.1.37",
     "prisma": "^5.13.0",
     "socket.io": "^4.7.5"
