--- a/package.json
+++ b/package.json
@@ -5,29 +5,38 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "npx tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.596.0",
+    "@aws-sdk/client-sqs": "^3.596.0",
+    "@clerk/clerk-sdk-node": "^5.0.11",
     "@google-cloud/dns": "^4.0.0",
+    "@google-cloud/pubsub": "^4.5.0",
     "@langchain/anthropic": "^0.1.17",
-    "@langchain/google-vertexai": "^0.0.16",
     "@langchain/openai": "^0.0.28",
     "@langchain/pinecone": "^0.0.4",
     "@pinecone-database/pinecone": "^2.2.1",
     "@prisma/client": "^5.13.0",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "google-auth-library": "^9.10.0",
+    "google-auth-library": "^8.9.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.1.37",
-    "prisma": "^5.13.0",
-    "socket.io": "^4.7.5"
+    "multer": "^1.4.5-lts.1",
+    "prisma": "^5.15.0",
+    "socket.io": "^4.7.5",
+    "svix": "^1.24.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "ts-node": "^10.9.2",
