--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,8 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/yugaa-express:latest
-          docker stop yugaa-express || true
-          docker rm yugaa-express || true
+          if [ $(docker ps -a -q -f name=yugaa-express) ]; then
+            docker stop yugaa-express
+            docker rm yugaa-express
+          fi
           docker run -d --name yugaa-express -p 3005:3000 ${{ secrets.DOCKER_HUB_USERNAME }}/yugaa-express:latest
