--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,9 +53,8 @@ jobs:
            echo "Stopped existing container if it existed"
            sudo docker rm yugaa-express || true
            echo "Removed existing container if it existed"
-           sudo docker run -d --name yugaa-express -p 3001:3001 
+           sudo docker run -d --name yugaa-express -p 3001:3001 \
            -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
            -e hi=fromhi \
            -e hi_env=fromhi_env \
            ${{ secrets.DOCKER_HUB_USERNAME }}/yugaa-express:latest
-           echo "New container started"
