--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
     "@google-cloud/dns": "^4.0.0",
     "@google-cloud/pubsub": "^4.5.0",
     "@langchain/anthropic": "^0.1.17",
-    "@langchain/openai": "^0.0.28",
-    "@langchain/pinecone": "^0.0.4",
-    "@pinecone-database/pinecone": "^2.2.1",
+    "@langchain/community": "^0.2.13",
+    "@langchain/core": "^0.2.10",
+    "@langchain/langgraph": "^0.0.25",
+    "@langchain/mongodb": "^0.0.4",
+    "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.13.0",
+    "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^9.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^8.9.0",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.1.37",
+    "langchain": "^0.2.8",
+    "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.15.0",
     "socket.io": "^4.7.5",
