--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "google-auth-library": "^8.9.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.2.8",
+    "mailparser": "^3.7.1",
     "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "parse-multipart-data": "^1.5.0",
     "prisma": "^5.15.0",
     "socket.io": "^4.7.5",
     "svix": "^1.24.0"
